# sprite

./: .gitattributes  CMakeLists.txt  README.md
.github/workflows/: deploy-landing.yml  release.yml
docs/: install.sh
docs/misc/: todo.txt
docs/scripts/: .zshrc  _sp  sp  sprite.zsh
docs/util/: move_binary.sh  update_prod_binary.sh
include/: Config.h
include/utils/: Helpers.h
landing/: app.jsx  components.jsx  content.jsx  index.html  package.json  styles.css  terminal.jsx
src/: main.cpp
src/impl/: Handler.cpp
src/impl/utils/: Helpers.cpp
tests/: test_Handler.cpp  test_Helpers.cpp  test_Shortcuts.cpp
tests/utils/: TempConfigFile.hpp
